# librelaws

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  requirements.txt  setup.py  tests.py
librelaws/: cli.py  conversion.py  fs_operations.py  git.py  online_lookups.py  xml_operations.py
librelaws/assets/: crop_bip_html.xsl  gii-norm.dtd  gii_xml_to_html.xsl
scripts/: context.py  librelaws
src/: gazette.rs  git.rs  main.rs  snapshot.rs
src/resources/: bip.rs  gii.rs  mod.rs
test_files/: StGB_pretty.xml
