[package]
name = "librelaws"
version = "0.1.0"
authors = ["cbourjau <cbourjau@posteo.de>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.33.0"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.26"
git2 = "0.8.0"
glob = "0.3.0"
lazy_static = "1.3.0"
libxml = "0.2.11"
libxslt = "0.1.1"
log = "0.4.6"
regex = "1.1.6"
reqwest = "0.9.15"
tempfile = "3.0.7"
tokio = "0.1.19"
url = "1.7.2"
zip = "0.5.2"
pandoc = "0.7.0"
